@@ -7,16 +7,18 @@ package Dist::Zilla::PluginBundle::Author::ETHER;
 
 our $VERSION = '0.168';
 
-use if "$]" >= 5.022, experimental => 're_strict';
-no if "$]" >= 5.031009, feature => 'indirect';
-no if "$]" >= 5.033001, feature => 'multidimensional';
-no if "$]" >= 5.033006, feature => 'bareword_filehandles';
 use Moose;
 with
     'Dist::Zilla::Role::PluginBundle::Easy',
     'Dist::Zilla::Role::PluginBundle::PluginRemover' => { -version => '0.103' },
     'Dist::Zilla::Role::PluginBundle::Config::Slicer';
 
+use if "$]" >= 5.022, experimental => 're_strict';
+no if "$]" >= 5.031009, feature => 'indirect';
+no if "$]" >= 5.033001, feature => 'multidimensional';
+no if "$]" >= 5.033006, feature => 'bareword_filehandles';
+no if "$]" >= 5.041009, feature => 'smartmatch';
+no feature 'switch';
 use Dist::Zilla::Util;
 use Moose::Util::TypeConstraints qw(enum subtype where class_type);
 use List::Util 1.45 qw(first any uniq none);
