@@ -1,6 +1,9 @@
 Revision history for Dist-Zilla-PluginBundle-Author-ETHER
 
 {{$NEXT}}
+          - minting profile updates:
+            - pragma boilerplate updated to disable "smartmatch" and "switch"
+              features
 
 0.167     2025-05-20 00:01:11Z
           - fix woven pod for irc details when irc channel contains a hyphen
